# GameEngine

./: CMakeLists.txt  CMakeSettings.json  main.cpp
MyClasses/: Behavior.h  Camera.cpp  Camera.h  EBO.cpp  EBO.h  GameObject.cpp  GameObject.h  LightObj.cpp  LightObj.h  ModelShaderUniform.h  PostProcessMode.h  Rotate.cpp  Rotate.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  Shader.cpp  Shader.h  Style.h  Transform.cpp  Transform.h  Translate.cpp  Translate.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h
core/: assimpLoader.cpp  assimpLoader.h  mesh.cpp  mesh.h  model.cpp  model.h  texture.cpp  texture.h  vertex.h
imgui/: imgui.h
models/: FactoryAssets.fbx  London.fbx  car.fbx  mirror.fbx  untitled.mtl
shaders/: fragment.fs  fullscreenQuad.vs  green.fs  greyFramebuffer.fs  invertColors.fs  invertColorsFramebuffer.vs  invertColorsFramebufferFragment.fs  modelVertex.vs  texture.fs  vertex.vs
